fix: button loading story component에 disabled 제거

--- a/stories/components/general/button/Button.stories.mdx
+++ b/stories/components/general/button/Button.stories.mdx
@@ -114,7 +114,7 @@ export const Default = (args, { argTypes }) => ({
                         <div class="flex-column mr-30">
                             <ButtonStateTitle>loading</ButtonStateTitle>
                             <template v-for="(color, index) in buttonColors">
-                                <Button :color="color" :type="type" disabled class="mb-16" loading></Button>
+                                <Button :color="color" :type="type" class="mb-16" loading></Button>
                             </template>
                         </div>
                     </div>
