feat: hover 상태를 바로 보기 위해 클래스 추가

--- a/stories/components/general/button/Button.stories.mdx
+++ b/stories/components/general/button/Button.stories.mdx
@@ -102,7 +102,7 @@ export const Default = (args, { argTypes }) => ({
                         <div class="flex-column mr-30">
                             <ButtonStateTitle>hover</ButtonStateTitle>
                             <template v-for="(color, index) in buttonColors">
-                                <Button :color="color" :type="type" class="mb-16">Button</Button>
+                                <Button :color="color" :type="type" class="mb-16 hover-test">Button</Button>
                             </template>
                         </div>
                         <div class="flex-column mr-30">
