--- a/stories/components/dataDisplay/card/EduCard.stories.mdx
+++ b/stories/components/dataDisplay/card/EduCard.stories.mdx
@@ -58,6 +58,54 @@ import Chip from '@/components/components/dataDisplay/chips/Chip';
 				type: 'text',
 			},
 		},
+		width: {
+			description: '너비<br/>`String`',
+			defaultValue: '100%',
+			table: {
+				type: {
+					summary: null,
+				},
+			},
+			control: {
+				type: 'text',
+			},
+		},
+		imageHeight: {
+			description: '이미지 높이<br/>`String`',
+			defaultValue: '',
+			table: {
+				type: {
+					summary: null,
+				},
+			},
+			control: {
+				type: 'text',
+			},
+		},
+		additionalSubtitle: {
+			description: '보조 정보<br/>`String`',
+			defaultValue: '2차 앵콜',
+			table: {
+				type: {
+					summary: null,
+				},
+			},
+			control: {
+				type: 'text',
+			},
+		},
+		backgroundColor: {
+			description: '배경색<br/>`String`',
+			defaultValue: 'white',
+			table: {
+				type: {
+					summary: null,
+				},
+			},
+			control: {
+				type: 'text',
+			},
+		},
 	}}
 />
 
@@ -73,8 +121,10 @@ export const Default = (args, { argTypes }) => ({
                         :category="category"
                         :caption-left="captionLeft"
                         :caption-right="captionRight"
-                        width="152px"
-                        imageHeight="100px"
+                        :width="width"
+                        :image-height="imageHeight"
+                        :additional-subtitle="additionalSubtitle"
+                        :background-color="backgroundColor"
                     >
                        <template v-slot:title>Title</template>
                     </EduCard>
@@ -85,6 +135,10 @@ export const Default = (args, { argTypes }) => ({
                         :category="category"
                         :caption-left="captionLeft"
                         :caption-right="captionRight"
+                        :width="width"
+                        :image-height="imageHeight"
+                        :additional-subtitle="additionalSubtitle"
+                        :background-color="backgroundColor"
                     >
                        <template v-slot:title>Title</template>
                     </EduCard>
@@ -95,6 +149,10 @@ export const Default = (args, { argTypes }) => ({
                         :category="category"
                         :caption-left="captionLeft"
                         :caption-right="captionRight"
+                        :width="width"
+                        :image-height="imageHeight"
+                        :additional-subtitle="additionalSubtitle"
+                        :background-color="backgroundColor"
                     >
                        <template v-slot:title>Title</template>
                     </EduCard>
@@ -133,10 +191,12 @@ export const Default = (args, { argTypes }) => ({
                                 category="category"
                                 caption-left="captionLeft"
                                 caption-right="captionRight"
+                                image-height="100px"
+                                additional-subtitle="2차 앵콜"
                             >
                                <template v-slot:chip>
                                   <ChipGroup>
-                                    <Chip size="small">복습 VOD</Chip>
+                                    <Chip size="medium">복습 VOD</Chip>
                                   </ChipGroup>
                                </template>
                                <template v-slot:title>Title</template>
@@ -145,12 +205,11 @@ export const Default = (args, { argTypes }) => ({
                         <StyleCol :col-lg="4">
                             <EduCard
                                 :background-image="exampleBackgroundImage"
-                                category="category"
-                                title="대기업 현직자와 알기 쉽게 이해하는 생산기술 생산관리의 핵심알아보고 보고서 작성과 직무 체험하기"
-                                caption-left="captionLeft"
-                                caption-right="captionRight"
+                                category="생산기술"
+                                caption-left="3개의 스케줄"
+                                caption-right="1월 20일까지"
                             >
-                               <template v-slot:title>Title</template>
+                               <template v-slot:title>대기업 현직자와 알기 쉽게 이해하는 생산기술 생산관리의 핵심 알아보고 보고서 작성과 직무 체험하기</template>
                             </EduCard>
                         </StyleCol>
                         <StyleCol :col-lg="4">
