--- a/stories/components/general/button/IconButton.stories.mdx
+++ b/stories/components/general/button/IconButton.stories.mdx
@@ -10,7 +10,7 @@ import { IconNames } from "@/components/elements/core/icon/Icon";
     argTypes={{
         iconName: {
             description: "버튼에 들어갈 텍스트",
-            defaultValue: "iconSendLargeFill",
+            defaultValue: "IconSendLargeFill",
             control: {
                 type: "select",
                 options: IconNames
