Feature/change button (#701)
* feat: 버튼관련 컬러 변경

* feat: button story 보기좋게 수정

* feat: validator 수정

* feat: secondary -> gray

* feat: light-success -> light-primary

* feat: light-primary hover backgroundColor 변경

* feat: gray color 추가

* feat: button story 피그마와 비슷하게 수정

* feat: button 수정

secondary 추가 & 색상변경

* fix: button loading story component에 disabled 제거

* feat: colorMap Reversed -> reversed로 변경 & 색상 변경

* feat: Loader validator 수정

* feat: default button의 loader 적용

* feat: hover 상태를 바로 보기 위해 클래스 추가

* feat: button story 수정

* fix: LoaderColors를 못 읽어서 수정

* feat: button outlined loader 적용

* feat: button outlined loader 색상변경

* feat: button story에서 안쓰는값 필터링

* feat: IconButton 추가 (#692)

* feat: IconButton 추가

* chore: 주석 추가

* feat: IconButton story 분리

* refactor: 필요없는 코드 제거

* feat: 버튼관련 컬러 변경

* feat: button story 보기좋게 수정

* feat: validator 수정

* feat: light-success -> light-primary

* feat: light-primary hover backgroundColor 변경

* feat: button story 피그마와 비슷하게 수정

* feat: button 수정

secondary 추가 & 색상변경

* fix: button loading story component에 disabled 제거

* feat: colorMap Reversed -> reversed로 변경 & 색상 변경

* feat: Loader validator 수정

* feat: default button의 loader 적용

* feat: hover 상태를 바로 보기 위해 클래스 추가

* feat: button story 수정

* fix: LoaderColors를 못 읽어서 수정

* feat: button outlined loader 적용

* feat: button outlined loader 색상변경

* feat: button story에서 안쓰는값 필터링

* feat: IconButton 추가 (#692)

* feat: IconButton 추가

* chore: 주석 추가

* feat: IconButton story 분리

* refactor: 필요없는 코드 제거

* feat: merge conflict 꼬인 부분 수정

* feat: 중복코드 제거

* fix: 오류있는 부분 수정

* fix: button loader info 색상 오류 수정

* fix: button icon type 제거

* fix: 오타 수정

* fix: 주석 수정

Co-authored-by: 유성실 <yooo1201@naver.com>

--- a/stories/components/general/button/Button.stories.mdx
+++ b/stories/components/general/button/Button.stories.mdx
@@ -1,6 +1,8 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import Button, { buttonSizes, buttonColors, buttonTypes } from '@/components/components/general/button/Button';
+import Typography from '@/components/elements/core/typography/Typography';
 import Icon from '@/components/elements/core/icon/Icon';
+import Loader from '@/components/components/other/Loader';
 
 <Meta
   title="General/Button/Button"
@@ -89,27 +91,63 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <div>
-                  <div style="display: flex">
-                    <Button color="primary">Fill Primary</Button>
-                    <Button color="success">Fill Success</Button>
-                    <Button color="error">Fill Error</Button>
-                    <Button color="secondary">Fill Gray</Button>
-                  </div>
-                  <div style="display: flex">
-                    <Button color="primary" type="outlined">Outlined Primary</Button>
-                    <Button color="success" type="outlined">Outlined Success</Button>
-                    <Button color="error" type="outlined">Outlined Error</Button>
-                    <Button color="secondary" type="outlined">Outlined Gray</Button>
-                  </div>
-                  <div style="display: flex">
-                    <Button color="primary" type="text">Text Primary</Button>
-                    <Button color="success" type="text">Text Success</Button>
-                    <Button color="error" type="text">Text Error</Button>
-                    <Button color="secondary" type="text">Text Gray</Button>
-                  </div>
+                  <template v-for="(type, index) in filteredButtonTypes">
+                    <div class="flex">
+                        <ButtonStateTitle class="mr-30">{{type}}</ButtonStateTitle>
+                        <div class="flex-column mr-30">
+                            <ButtonStateTitle>default</ButtonStateTitle>
+                            <template v-for="(color, index) in getFilterButtonColors(type)">
+                                <Button :color="color" :type="type" class="mb-16">Button</Button>
+                            </template>
+                        </div>
+                        <div class="flex-column mr-30">
+                            <ButtonStateTitle>hover</ButtonStateTitle>
+                            <template v-for="(color, index) in getFilterButtonColors(type)">
+                                <Button :color="color" :type="type" class="mb-16 hover-test">Button</Button>
+                            </template>
+                        </div>
+                        <div class="flex-column mr-30">
+                            <ButtonStateTitle>disabled</ButtonStateTitle>
+                            <template v-for="(color, index) in getFilterButtonColors(type)">
+                                <Button :color="color" :type="type" disabled class="mb-16">Button</Button>
+                            </template>
+                        </div>
+                        <div class="flex-column mr-30">
+                            <ButtonStateTitle>loading</ButtonStateTitle>
+                            <template v-for="(color, index) in getFilterButtonColors(type)">
+                                <Button :color="color" :type="type" class="mb-16" loading></Button>
+                            </template>
+                        </div>
+                    </div>
+                  </template>
                 </div>
-        `,
-            components: { Button },
+            `,
+            data() {
+                return {
+                    buttonColors,
+                    buttonTypes,
+                }
+            },
+            methods: {
+                getFilterButtonColors(type) {
+                    return type === 'fill' ? this.buttonColors : this.filteredButtonColors
+                }
+            },
+            computed: {
+                // light-primary는 fill type에서만 쓰임
+                filteredButtonColors() {
+                    return Object.assign(buttonColors, {}).filter(item => item !== 'light-primary')
+                },
+                filteredButtonTypes() {
+                    return Object.assign(buttonTypes, {}).filter(item => item !== 'icon')
+                },
+            },
+            components: { Button, Typography, Loader,
+                'ButtonStateTitle': {
+                    template: `<Typography type="body2" color="gray400" class="mb-10" style="min-width: 70px"><slot/></Typography>`,
+                    components: {Typography},
+                },
+            },
         }}
     </Story>
 </Canvas>
