--- a/stories/components/general/button/NarrowButton.stories.mdx
+++ b/stories/components/general/button/NarrowButton.stories.mdx
@@ -28,6 +28,12 @@ import Icon from '@/components/elements/core/icon/Icon';
                 options: narrowButtonSizes,
             },
         },
+        transparent: {
+            description: "투명 타입 여부",
+            control: {
+                type: "boolean",
+            },
+        },
     }}
 />
 
@@ -36,7 +42,7 @@ export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { NarrowButton },
     template:
-     `<NarrowButton :color="color" :size="size">{{label}}</NarrowButton>`,
+     `<NarrowButton :color="color" :size="size" :transparent="transparent">{{label}}</NarrowButton>`,
 });
 
 # NarrowButton
@@ -169,6 +175,47 @@ export const Default = (args, { argTypes }) => ({
                 </div>
             </div>
         `,
+            components: { NarrowButton, Icon },
+        }}
+    </Story>
+</Canvas>
+
+### Transparent
+<Canvas>
+    <Story name="Transparent" height="100px">
+        {{
+            template: `
+                <div>
+                    <div style="background: #CF5310" class="p-8 mb-10">
+                        <div class="flex">
+                            <NarrowButton size="small" color="white" transparent class="mr-10">Small</NarrowButton>
+                            <NarrowButton size="small" color="white" transparent class="hover-test">Small</NarrowButton>
+                        </div>
+                        <div class="flex my-10">
+                            <NarrowButton size="medium" color="white" transparent class="mr-10">Medium</NarrowButton>
+                            <NarrowButton size="medium" color="white" transparent class="hover-test">Medium</NarrowButton>
+                        </div>
+                        <div class="flex">
+                            <NarrowButton size="large" color="white" transparent class="mr-10">Large</NarrowButton>
+                            <NarrowButton size="large" color="white" transparent class="hover-test">Large</NarrowButton>
+                        </div>
+                    </div>
+                    <div style="background: #040505" class="p-8">
+                        <div class="flex">
+                            <NarrowButton size="small" color="white" transparent class="mr-10">Small</NarrowButton>
+                            <NarrowButton size="small" color="white" transparent class="hover-test">Small</NarrowButton>
+                        </div>
+                        <div class="flex my-10">
+                            <NarrowButton size="medium" color="white" transparent class="mr-10">Medium</NarrowButton>
+                            <NarrowButton size="medium" color="white" transparent class="hover-test">Medium</NarrowButton>
+                        </div>
+                        <div class="flex">
+                            <NarrowButton size="large" color="white" transparent class="mr-10">Large</NarrowButton>
+                            <NarrowButton size="large" color="white" transparent class="hover-test">Large</NarrowButton>
+                        </div>
+                    </div>
+                </div>
+            `,
             components: { NarrowButton, Icon },
         }}
     </Story>
