feat: icon-pt-large-line 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -187,6 +187,7 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconAnalyticsLargeLine" />
                           <IconWrapper component="Icon" name="IconMentoringLargeLine" />
                           <IconWrapper component="Icon" name="IconEduLargeLine" />
+                          <IconWrapper component="Icon" name="IconPtLargeLine" />
                       </div>
                       <div style="display: flex; flex-wrap: wrap;">
                           <IconWrapper component="Icon" name="IconArrowLargeLine" />
