fix: Badge story 수정

--- a/stories/components/dataDisplay/Badge.stories.mdx
+++ b/stories/components/dataDisplay/Badge.stories.mdx
@@ -193,17 +193,17 @@ export const Default = (args, { argTypes }) => ({
   </Story>
 </Canvas>
 
-### Error
+### Secondary
 
 <Canvas>
-  <Story name="Error" height="100px">
+  <Story name="Secondary" height="100px">
     {{
       template: `
         <div>
           <div class="mt-20">
             <Badge
               text="1"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="28"
@@ -212,7 +212,7 @@ export const Default = (args, { argTypes }) => ({
             </Badge>
             <Badge
               text="99+"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="28"
@@ -222,7 +222,7 @@ export const Default = (args, { argTypes }) => ({
             </Badge>
             <Badge
               text="N"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="28"
@@ -233,7 +233,7 @@ export const Default = (args, { argTypes }) => ({
           <Divider class="my-10" />
           <Badge
             text="1"
-            color="error"
+            color="secondary"
             :offset-x="12"
             :offset-y="38"
           >
@@ -243,7 +243,7 @@ export const Default = (args, { argTypes }) => ({
           </Badge>
           <Badge
             text="99+"
-            color="error"
+            color="secondary"
             :offset-x="12"
             :offset-y="38"
             style="margin: 0 24px"
@@ -254,7 +254,7 @@ export const Default = (args, { argTypes }) => ({
           </Badge>
           <Badge
             text="N"
-            color="error"
+            color="secondary"
             :offset-x="12"
             :offset-y="38"
           >
@@ -265,7 +265,7 @@ export const Default = (args, { argTypes }) => ({
           <div class="mt-20">
             <Badge
               text="1"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="38"
@@ -276,7 +276,7 @@ export const Default = (args, { argTypes }) => ({
             </Badge>
             <Badge
               text="99+"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="38"
@@ -288,7 +288,7 @@ export const Default = (args, { argTypes }) => ({
             </Badge>
             <Badge
               text="N"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="38"
@@ -317,7 +317,7 @@ export const Default = (args, { argTypes }) => ({
             <Icon name="IconAlarmLargeLine" />
               <Badge
                 text="1"
-                color="error"
+                color="secondary"
                 type="inline"
             />
           </div>
