fix: 스토리 제목 오류 수정

--- a/stories/components/general/button/IconButton.stories.mdx
+++ b/stories/components/general/button/IconButton.stories.mdx
@@ -55,9 +55,9 @@ export const Default = (args, { argTypes }) => ({
         />`,
 });
 
-# Button
+# IconButton
 
-**Button** 컴포넌트의 문서입니다.
+**IconButton** 컴포넌트의 문서입니다.
 
 <Story name="Default" height="100px">
     {Default.bind({})}
